--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,50 @@
-# Auto detect text files and perform LF normalization
+# ==============================================================================
+# AUTHOR:  aemcomtech.au
+# VERSION: 1.2026.02.10.170845
+# WEBSITE: aemcomtech.au
+# PURPOSE: Normalize line endings for a Windows-hosted Docker environment
+#          to ensure cross-platform compatibility between "IKE" (Windows) 
+#          and Linux-based container services.
+# ==============================================================================
+
+# 🎩 MadHatter Summary:
+# ---------------------
+# - The Architect (White Hat): Standardizes the foundation; prevents the "it works on my 
+#   machine" syndrome by enforcing consistent line-ending logic across the stack.
+# - The SysAdmin (Green Hat): A critical patch for the "CRLF vs LF" headache. Ensures 
+#   your .sh scripts and .yml configs don't throw invisible syntax errors in Docker.
+# - The Student (Blue Hat): A textbook example of Git's power to manage environment 
+#   impedance mismatch. Essential for anyone bridging the Windows-Linux divide.
+# - The Saboteur (Red Hat): Silences the most common "invisible" bug that breaks 
+#   container entrypoints and automation workflows.
+
+# Handle line endings automatically for text files
 * text=auto
+
+# Force LF for shell scripts and docker-specific files 
+# (Critical for scripts running inside Linux containers)
+*.sh text eol=lf
+*.bash text eol=lf
+docker-compose*.yml text eol=lf
+Dockerfile* text eol=lf
+
+# Ensure web and config files use LF to avoid parsing issues in Linux
+*.js text eol=lf
+*.json text eol=lf
+*.php text eol=lf
+*.yaml text eol=lf
+*.yml text eol=lf
+*.conf text eol=lf
+
+# Force CRLF for Windows-specific batch/PowerShell files
+*.bat text eol=crlf
+*.ps1 text eol=crlf
+
+# Denote all files that are truly binary and should not be modified
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.ico binary
+*.pdf binary
+*.db binary
