--- a/arr-stack/.env.example
+++ b/arr-stack/.env.example
@@ -2,7 +2,7 @@
 # AUTHOR:  aemcomtech.au
 # VERSION: 1.2026.02.10.173813
 # WEBSITE: aemcomtech.au
-# PURPOSE: Environment Variables for IKE's Arr-Stack & Gluetun VPN.
+# PURPOSE: Environment Variables for Arr-Stack & Gluetun VPN.
 #          This file contains sensitive keys and local system paths.
 # ==============================================================================
 
