--- a/authentik/.env.example
+++ b/authentik/.env.example
@@ -22,6 +22,10 @@ TZ=Australia/Melbourne
 PGID=1000
 PUID=1000
 
+# --- NETWORK CONFIGURATION ---
+YOUR_NETWORK_1=
+YOUR_NETWORK_2=
+
 # --- EMAIL SETTINGS (Optional for invites/recovery) ---
 # AUTHENTIK_EMAIL__HOST=localhost
 # AUTHENTIK_EMAIL__PORT=25
