--- a/authentik/docker-compose.yml
+++ b/authentik/docker-compose.yml
@@ -28,7 +28,7 @@ services:
       POSTGRES_DB: ${AUTHENTIK_POSTGRESQL__NAME}
       TZ: ${TZ}
     networks:
-      auth-ext:
+      ${YOUR_NETWORK_1}:
     deploy:
       resources:
         limits:
@@ -60,7 +60,7 @@ services:
       auth-pgsql:
         condition: service_healthy
     networks:
-      auth-ext:
+      ${YOUR_NETWORK_1}:
     deploy:
       resources:
         limits:
@@ -94,8 +94,8 @@ services:
       retries: 5
       timeout: 5s
     networks:
-      auth-ext:
-      caddy_plex_default:
+      ${YOUR_NETWORK_1}:
+      ${YOUR_NETWORK_2}:
     deploy:
       resources:
         limits:
@@ -128,7 +128,7 @@ services:
       retries: 5
       timeout: 20s
     networks:
-      auth-ext:
+      ${YOUR_NETWORK_1}:
     deploy:
       resources:
         limits:
@@ -147,7 +147,7 @@ services:
       - "9009:9000" 
       - "9444:9443"
     networks:
-      - auth-ext
+      - ${YOUR_NETWORK_1}
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "--spider", "-q", "http://authentik-server:9000/outpost.goauthentik.io/ping"]
@@ -161,9 +161,9 @@ services:
           memory: 512MB
 
 networks:
-  auth-ext:
+  ${YOUR_NETWORK_1}:
     name: authentik
     external: true
-  caddy_plex_default:
-    name: default
+  ${YOUR_NETWORK_2}:
+    name: internet
     external: true
