--- a/arr-stack/.env.example
+++ b/arr-stack/.env.example
@@ -11,6 +11,10 @@ PUID=1000
 PGID=1000
 TZ=Australia/Melbourne
 
+# --- NETWORK CONFIGURATION ---
+YOUR_NETWORK_1=
+YOUR_NETWORK_2=
+
 # --- HOST PATHS (IKE WINDOWS SERVER) ---
 # Ensure these paths exist on your Windows host
 CONFIG_ROOT=
