--- a/audiobookshelf/.env.example
+++ b/audiobookshelf/.env.example
@@ -8,7 +8,7 @@
 TZ=Australia/Melbourne
 
 # --- NETWORK CONFIGURATION ---
-YOUR_NETWORK_1=caddy_plex_default
+YOUR_NETWORK_1=
 
 # --- AUDIOBOOKSHELF SETTINGS ---
 # Port exposed to the host
