--- a/jellyfin/.env.example
+++ b/jellyfin/.env.example
@@ -10,8 +10,8 @@ PGID=1001
 TZ=Australia/Melbourne
 
 # --- NETWORK CONFIGURATION ---
-YOUR_NETWORK_1=caddy_plex_default
-YOUR_NETWORK_2=auth-ext
+YOUR_NETWORK_1=
+YOUR_NETWORK_2=
 
 # --- JELLYFIN SETTINGS ---
 # Port for Web UI
