--- a/searxng/.env.example
+++ b/searxng/.env.example
@@ -8,8 +8,8 @@
 TZ=Australia/Melbourne
 
 # --- NETWORK CONFIGURATION ---
-YOUR_NETWORK_1=caddy_plex_default
-YOUR_NETWORK_2=auth-ext
+YOUR_NETWORK_1=
+YOUR_NETWORK_2=
 
 # --- SEARXNG SETTINGS ---
 # Domain where the instance is hosted
