--- a/vaultwarden/.env.example
+++ b/vaultwarden/.env.example
@@ -10,8 +10,8 @@ PGID=1000
 TZ=Australia/Melbourne
 
 # --- NETWORK CONFIGURATION ---
-YOUR_NETWORK_1=caddy_plex_default
-YOUR_NETWORK_2=vw-aemcomtech
+YOUR_NETWORK_1=
+YOUR_NETWORK_2=
 
 # --- VAULTWARDEN SETTINGS ---
 # Domain where the instance is hosted (Required for WebAuthn/U2F)
