--- a/watchtower/.env.example
+++ b/watchtower/.env.example
@@ -8,7 +8,7 @@
 TZ=Australia/Melbourne
 
 # --- NETWORK CONFIGURATION ---
-YOUR_NETWORK_1=caddy_plex_default
+YOUR_NETWORK_1=
 
 # --- WATCHTOWER SETTINGS ---
 # Schedule: At 04:00 AM everyday
